--- a/style.css
+++ b/style.css
@@ -5,3 +5,9 @@
     box-sizing: border-box;
     font-family: 'Lato', sans-serif;
 }
+html, body{
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    background: #f6f6f6;
+}
