--- a/style.css
+++ b/style.css
@@ -11,3 +11,26 @@ html, body{
     padding: 0px;
     background: #f6f6f6;
 }
+.container{
+    width: 100%;
+}
+.container .row{
+    width: 80%;
+    margin: auto;
+}
+.container .row .header{
+    width: 60%;
+    text-align: center;
+    margin: auto;
+}
+.container .row .header h1{
+    padding-top: 30px;
+    font-size: 45px;
+    color: #e19c30;
+}
+.container .row .header p{
+    margin-top: 15px;
+    font-size: 18px;
+    line-height: 1.5;
+    color: #6e6e6e;
+}
