--- a/style.css
+++ b/style.css
@@ -64,3 +64,78 @@ html, body{
 .content .card ul{
     font-size: 15px;
 }
+.footer{
+    background: #303036;
+    color: #d3d3d3;
+    height: 400px;
+    position: relative;
+}
+.footer .footer-content{
+    border: 1px solid red;
+    height: 350px;
+    display: flex;
+}
+.footer .footer-content .footer-section{
+    flex: 1;
+    padding: 25px;
+    border: 1px solid white;
+}
+.footer .footer-content h1 .footer .footer-content h2{
+    color: #fff;
+
+}
+.footer .footer-content .about h1 span{
+    color: #05f7ff;
+}
+ .footer .footer-content .about .contact span{
+    display: block;
+    font-size: 1.13m;
+    margin-bottom: 8px;
+}
+.footer .footer-content .about .socials a{
+    border: 1px solid gray;
+    width: 45px;
+    height: 41px;
+    padding-top: 5px;
+    margin-right: 5px;
+    text-align: center;
+    display: inline-block;
+    font-size: 1.3em;
+    border-radius: 5px;
+}
+.footer .footer-content .about .socials a:hover{
+    border: 1px solid #fff;
+    color: #fff;
+    transition: all .3s;
+}
+.footer .footer-content .links ul a{
+    display: block;
+    margin-bottom: 10px;
+    font-size: 1.2em;
+}
+.footer .footer-content .links ul a:hover{
+    color: #fff;
+    margin-left: 15px;
+    transition: all.3s;
+}
+.footer .footer-content .contact-form .contact-input{
+    background: #272727;
+    color: #fff;
+    margin-bottom: 10px;
+    line-height: 1.5rem;
+    padding: .7rem 1.2rem;
+}
+.footer .footer-content .contact-form .contact-input:focus{
+    background: #1a1a1a;
+}
+.footer .footer-bottom{
+    background: #343a40;
+    color: #686868;
+    height: 50px;
+    text-align: center;
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    padding-top: 20px;
+    width: 100%;
+}
