--- a/style.css
+++ b/style.css
@@ -150,3 +150,9 @@ html, body{
     padding: .7rem 1.3rem;
     line-height: 1.3rem;
 }
+.page-wrapper{
+    min-height: 100%
+}
+.page-wrapper a:hover{
+    color: #006669;
+}
