--- a/style.css
+++ b/style.css
@@ -162,3 +162,79 @@ html, body{
         flex-direction: column;
     }
 }
+time{
+    font:700 1.0rem/1.2 "Robot";
+    color: hsl(250, 100%, 83%)
+}
+header{
+    background: #008489;
+    height: 66px;
+}
+header ul {
+    float: right;
+    margin: 0px;
+    padding: 0px;
+    list-style: none;
+}
+header ul li {
+    float: left;
+    position: relative;
+}
+header ul li a {
+    display: block;
+    padding: 21px;
+    font-size: 1.1em;
+    text-decoration: none;
+}
+header ul li a:hover {
+    background: #006669;
+    transition: 0.5s;
+}
+header ul li ul {
+    position: absolute;
+    top: 66px;
+    right: 0px;
+    width: 180px;
+    display: none;
+}
+header ul li:hover ul {
+    display: block;
+}
+
+header ul li ul li {
+    width: 100%;
+
+}
+header ul li ul li a {
+    padding: 10px;
+    background: #fff;
+    color: #444;
+}
+header ul li ul li a.logout{
+    color: red;
+}
+header ul li ul li a:hover {
+    background: #d5d6d6;
+}
+
+header *{
+    color: #fff;
+}
+header .logo{
+    float: left;
+    height: inherit;
+    margin-left: 2em;
+    
+}
+header .logo-text{
+    margin: 9px;
+    font-family: 'Candal',serif;
+}
+header .logo-text span{
+    color: #05f7ff;
+}
+
+
+header .menu-toggle{
+    display: none;
+}
