--- a/style.css
+++ b/style.css
@@ -238,3 +238,44 @@ header .logo-text span{
 header .menu-toggle{
     display: none;
 }
+@media only screen and (max-width: 750px){
+    header{
+        position: relative;
+    }
+    header ul{
+        width: 100%;
+        background: #0e94a0;
+        max-height: 0px;
+        overflow: hidden;
+    }
+    header ul li{
+        width: 100%;
+    }
+    header ul li ul {
+        position: static;
+        width: 100%;
+        display: block;
+        background: inherit;
+    }
+    header ul li ul li a {
+        padding: 10px;
+        background: #0e94a0;
+        color: #fff;
+        padding-left: 50px;
+    }
+    header ul li ul li a.logout{
+        color: red;
+    }
+    header .menu-toggle{
+        display: block;
+        position: absolute;
+        right: 20px;
+        top: 20px;
+        font-size: 1.5em;
+    }
+    header .logo{
+        margin-left: .5em;
+        
+    }
+   
+}
