--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ html, body{
     height: 100%;
     margin: 0px;
     padding: 0px;
-    background: #f6f6f6;
+    background: #f08080;
 }
 .container{
     width: 100%;
@@ -26,7 +26,7 @@ html, body{
 .container .row .header h1{
     padding-top: 30px;
     font-size: 45px;
-    color: #e19c30;
+    color: #800000;
 }
 .container .row .header p{
     margin-top: 15px;
@@ -44,7 +44,7 @@ html, body{
     flex: 1;
     margin: 50px 20px;
     box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.1);
-    background-color: #fff;
+    background-color: #ffb6c1;
 }
 .content .card img{
     width: 100%;
@@ -65,7 +65,7 @@ html, body{
     font-size: 15px;
 }
 .footer{
-    background: #303036;
+    background: #cd5c5c;
     color: #d3d3d3;
     height: 400px;
     position: relative;
@@ -85,7 +85,7 @@ html, body{
 
 }
 .footer .footer-content .about h1 span{
-    color: #05f7ff;
+    color: #800000;
 }
  .footer .footer-content .about .contact span{
     display: block;
@@ -129,7 +129,7 @@ html, body{
     background: #1a1a1a;
 }
 .footer .footer-bottom{
-    background: #343a40;
+    background: #f08080;
     color: #686868;
     height: 50px;
     text-align: center;
@@ -167,7 +167,7 @@ time{
     color: hsl(250, 100%, 83%)
 }
 header{
-    background: #008489;
+    background: #f08080;
     height: 66px;
 }
 header ul {
@@ -231,7 +231,7 @@ header .logo-text{
     font-family: 'Candal',serif;
 }
 header .logo-text span{
-    color: #05f7ff;
+    color: #800000;
 }
 
 
