--- a/style.css
+++ b/style.css
@@ -150,9 +150,21 @@ html, body{
     color: white !important;
     background: #f08080;
 }
+.text-input{
+    padding: .7rem 1rem;
+    display: inline;
+}
 .btn-big{
     padding: .7rem 1.3rem;
     line-height: 1.3rem;
+    width: 100%;
+    border-radius: 5px;
+    border: 1px solid #e0e0e0;
+    outline: none;
+    color: #444;
+    font-size: 1.2em;
+    line-height: 1.5rem;
+    font-family: 'Lora',serif;
 }
 .page-wrapper{
     min-height: 100%
@@ -209,10 +221,35 @@ html, body{
 .content .sidebar{
     width: 30%;
     float: left;
-    border: 1px dashed green;
     height: 300px;
 }
-
+.content .sidebar .section{
+    background: #800000;
+    padding: 20px;
+    border-radius: 5px;
+    margin-bottom: 20px;
+}
+.content .sidebar .section .section-title{
+    margin: 10px 0px 10px 0px;
+}
+.content .sidebar .section .search{
+    margin-top: 80px;
+}
+.content .sidebar .section.topics ul{
+    margin: 0px;
+    padding: 0px;
+    list-style: none;
+    border-top: 1px solid #e0e0e0;
+}
+.content .sidebar .section.topics ul li a{
+    border-bottom: 1px solid #e0e0e0;
+    display: block;
+    padding: 15px 0px 15px 0px;
+}
+.content .sidebar .section.topics ul li a:hover{
+    padding-left: 10px;
+    transition: all 0.3s;
+}
 .clearfix:after{
     content: '';
     display: block;
